# mywebnote

server/: Cargo.toml
server/benchmarks/: Cargo.toml
server/src/cmd/: Cargo.toml
server/src/cmd/src/: lib.rs
server/src/cmd/src/cmd/: mod.rs  serve.rs
server/src/common/audit-log/: Cargo.toml
server/src/common/audit-log/src/: lib.rs
server/src/common/error/src/: ext.rs  format.rs  lib.rs  mock.rs  status_code.rs
server/src/common/log/: Cargo.toml
server/src/common/log/src/: lib.rs
server/src/common/macro/: Cargo.toml
server/src/common/macro/src/: admin_fn.rs  aggr_func.rs  lib.rs  print_caller.rs  range_fn.rs  stack_trace_debug.rs  utils.rs
server/src/common/macro/tests/: test_derive.rs
server/src/common/makestruct/: Cargo.toml
server/src/common/makestruct/src/: lib.rs
server/src/common/mem-prof/: README.md
server/src/common/mem-prof/src/: error.rs  jemalloc.rs  lib.rs
server/src/common/mem-prof/src/jemalloc/: error.rs
server/src/common/telemetry/: Cargo.toml
server/src/common/telemetry/src/: lib.rs  logging.rs  macros.rs  metric.rs  panic_hook.rs  tracing_context.rs  tracing_sampler.rs
server/src/core/: Cargo.toml
server/src/core/benches/: bench_main.rs  path_matching.rs
server/src/core/src/: lib.rs
server/src/core/src/cache/: memory.rs  mod.rs  redis.rs
server/src/core/src/config/: config_serve.rs  mod.rs  resources.rs  swagger.rs
server/src/core/src/context/: mod.rs  state.rs
server/src/core/src/handler/: auth.rs  browser_indexeddb_v2.rs  document.rs  folder.rs  settings.rs  user.rs
server/src/core/src/handler/api_v1/: user.rs
server/src/core/src/mgmt/: health.rs
server/src/core/src/mgmt/apm/: logging.rs  metrics.rs  mod.rs  otel.rs  profiling.rs
server/src/core/src/route/: auths.rs  browser_indexeddb.rs  document.rs  folder.rs  mod.rs  settings.rs  user.rs
server/src/core/src/route/api_v1/: users.rs
server/src/core/src/store/: documents_mongo.rs  documents_sqlite.rs  folders_mongo.rs  folders_sqlite.rs  mod.rs  mongo.rs  settings_mongo.rs  settings_sqlite.rs  sqlite.rs  users_mongo.rs  users_sqlite.rs
server/src/core/src/utils/: auths.rs  mod.rs  oauth2.rs  oidcs.rs
server/src/types/: Cargo.toml
server/src/types/src/: auth.rs  browser_indexeddb.rs  document.rs  folder.rs  lib.rs  settings.rs  user.rs
server/src/types/src/api_v1/: users.rs
server/src/utils/: Cargo.toml
server/src/utils/src/: browser_indexeddb.rs  cgroup.rs  ethers.rs  httpclients.rs  inets.rs  lib.rs  mems.rs  rsa_ciphers.rs  serde_beans.rs  snowflake.rs  types.rs  webs.rs
server/static/: 403.html  404.html
server/tests/: integration.rs
server/tests/cache/: mod.rs  redis.rs
