[package]
name = "server-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Project sub-modules.
server-utils.workspace = true
common-makestruct.workspace = true
# ThirdParty Libraries.
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
validator.workspace = true
chrono.workspace = true
hyper.workspace = true
anyhow.workspace = true
sqlx.workspace = true
