[package]
name = "server-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Thirdparty Libraries.
serde.workspace = true
serde_json.workspace = true
openssl.workspace = true
chrono.workspace = true
axum.workspace = true
tokio.workspace = true
hyper.workspace = true
tower-cookies.workspace = true
mac_address.workspace = true
lazy_static.workspace = true
tracing.workspace = true
oauth2.workspace = true
openidconnect.workspace = true
jsonwebtoken.workspace = true
url.workspace = true
reqwest.workspace = true
sysinfo.workspace = true
hex.workspace = true
base64.workspace = true
idb.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
local-ip-address.workspace = true
validator.workspace = true
