[package]
name = "common-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
atty = "0.2"
backtrace = "0.3"
common-error.workspace = true
console-subscriber = { version = "0.1", optional = true }
lazy_static.workspace = true
once_cell.workspace = true
# Tracing Libraries.
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.1"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.21.0", default-features = false, features = [
    "trace",
] }
opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14.0", features = ["tokio"] }
opentelemetry-semantic-conventions = "0.13.0"
parking_lot = { version = "0.12" }
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
# Inter-Process APM Libraries.
pyroscope = { version = "0.5.7", optional = true }
pyroscope_pprofrs = { version = "0.2.7", optional = true }

[features]
tokio-console = ["console-subscriber", "tokio/tracing"]
deadlock_detection = ["parking_lot/deadlock_detection"]
profiling = ["dep:pyroscope", "dep:pyroscope_pprofrs"]
